added 2 save files

--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
                 <option value="./saves/Two nice cells in lake valley.weathersandbox">Two nice cells in lake valley</option>
                 <option value="./saves/Insane CAPE.weathersandbox">Insane CAPE</option>
                 <option value="./saves/100 X 100 Test.weathersandbox">100 X 100 Test</option>
+                <option value="./saves/destructivestorms_justaddwater.weathersandbox">Destructive Storms with powerful tornadoes, add lakes, then enjoy</option>
+                <option value="./saves/destructivetornadoes.weathersandbox">Destructive Tornadoes</option>
             </select>
             <input type="button" value="Load Selected Save" onclick="loadSelectedSave()" />
         </div>
