updated index and saves directory
this is a nice save file, has a large body of water, that the storm forms very quickly over, breaks cap multiple times.

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                 <option value="./saves/100 X 100 Test.weathersandbox">100 X 100 Test</option>
                 <option value="./saves/destructivestorms_justaddwater.weathersandbox">Destructive Storms with powerful tornadoes, add lakes, then enjoy</option>
                 <option value="./saves/destructivetornadoes.weathersandbox">Destructive Tornadoes</option>
+                <option value="./saves/destructivestorms_water_added.weathersandbox">Destructive storm, small lake</option>
             </select>
             <input type="button" value="Load Selected Save" onclick="loadSelectedSave()" />
         </div>
